--- a/css/style-layout.css
+++ b/css/style-layout.css
@@ -4,19 +4,11 @@
 .wrapper {
 	min-height: 100%;
 	overflow: hidden;
-	margin: 152px 753px 120px 345px;
+	/* margin: 152px 753px 120px 345px; */
 }
 /* ================================================================ */
 
 /* ========================= Part 1 ============================== */
-
-h2 {
-	font-weight: 900;
-	font-size: 50px;
-	text-transform: uppercase;
-	max-width: 300px;
-	margin-bottom: 190px;
-}
 
 body {
 	font-family: "Lato", sans-serif;
@@ -26,15 +18,27 @@ body {
 	color: #424551;
 }
 
+h2 {
+	font-weight: 900;
+	font-size: 50px;
+	text-transform: uppercase;
+	max-width: 300px;
+	margin-bottom: 190px;
+}
+
 .header {
 	color: #1e212c;
 	font-weight: 900;
 	font-size: 46px;
 	line-height: 1.3;
 	margin-bottom: 26px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .data {
+	margin-left: 345px;
+	max-width: 810px;
 	display: inline-block;
 	background: url(../img/vector_stroke.png) no-repeat;
 	color: #787a80;
@@ -48,9 +52,12 @@ body {
 	background: url(../img/union.png) no-repeat;
 	color: #787a80;
 	padding-left: 24px;
+	max-width: 810px;
 }
 
 .img__dekstop {
+	padding-left: 345px;
+	margin-right: 753px;
 	margin-bottom: 60px;
 }
 
@@ -59,16 +66,22 @@ body {
 	font-size: 20px;
 	line-height: 1.5;
 	margin-bottom: 24px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .paragraph__text {
 	line-height: 1.6;
 	margin-bottom: 30px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .paragraph__text-two {
 	line-height: 1.6;
 	margin-bottom: 48px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .paragraph__quote {
@@ -79,10 +92,14 @@ body {
 	background: url(../img/braces.png) no-repeat;
 	padding-left: 58px;
 	margin-bottom: 48px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .paragraph__text-three {
 	margin-bottom: 24px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .list__text li {
@@ -90,6 +107,8 @@ body {
 	padding-left: 32px;
 	line-height: 1.6;
 	margin-bottom: 4px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 ul {
@@ -99,6 +118,8 @@ ul {
 .paragraph__last {
 	line-height: 1.6;
 	margin-bottom: 60px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 /* ========================= Part 2 ============================== */
@@ -110,6 +131,8 @@ h3 {
 	letter-spacing: 1px;
 	color: #1e212c;
 	margin-bottom: 8px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 h4 {
@@ -118,12 +141,16 @@ h4 {
 	font-size: 46px;
 	line-height: 1.3;
 	margin-bottom: 40px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 ul.list__texttwo {
 	max-width: 390px;
 	line-height: 1.6;
 	margin-bottom: 48px;
+	margin-left: 345px;
+	max-width: 810px;
 }
 
 .list__texttwo li {
@@ -144,4 +171,6 @@ ul.list__texttwo {
 	max-height: 44px;
 	padding: 0 32px;
 	margin-bottom: 26px;
+	margin-left: 345px;
+	display: inline-block;
 }
